--- a/css/style.css
+++ b/css/style.css
@@ -74,81 +74,66 @@ body {
   width: 1170px;
   }
 
-/* h1 
-толщина шрифта 400
-
-размер шрифта 60 пикселей
-
-межстрочный интервал 60 пикселей
-
-цвет текста #333*/
+/* h1 */
 .main_title {
   margin-top: 0;
   margin-bottom: 40px;
+  font-weight: 400;
+  font-size: 60px;
+  line-height: 60px;
+  color: #333;
 }
 
-/* h2 
-размер шрифта 40 пикселей
-
-межстрочный интервал 46 пикселей
-
-цвет текста #333*/
+/* h2 */
 .title {
   margin-top: 0;
   margin-bottom: 10px;
+  font-size: 40px;
+  line-height: 46px;
+  color: #333;
 }
 
-/* h3 
-толщина шрифта 400
-
-размер шрифта 30 пикселей
-
-межстрочный интервал 34 пикселя
-
-цвет текста #333 */
+/* h3 */
 .subtitle {
   margin-top: 0;
   margin-bottom: 10px;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 34px;
+  color: #333;
 }
 
-/* p 
-толщина шрифта 400
-
-размер шрифта 20 пикселей
-
-межстрочный интервал 32 пикселя
-
-цвет текста #333*/
+/* p */
 .text {
   width: 872px;
   margin-top: 0;
   margin-bottom: 40px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 32px;
+  color: #333;
 }
 
-/* радиус бордера 20 пикселей
-
-внутренние отступы - сверху и снизу по 50 пикселей, слева и справа по 95 пикселей
-
-ширину 100%
-
-толщину шрифта 700
-
-размер шрифта 30 пикселей
-
-цвет текста - белый
-
-цвет фона #3f2aff*/
+/* p blue-box */
 .text__blue-box {
-
+  margin-top: 0;
+  margin-bottom: 40px;
+  border-radius: 20px;
+  padding: 50px 95px;
+  width: 100%;
+  font-weight: 700;
+  font-size: 30px;
+  color: white;
+  background-color: #3f2aff;
 }
 
-/* добавьте каждому из блоков еще один класс, в котором будет только
-свойство background-image. А стили для позиционирования фона пропишите в основной класс
-https://skillbox.ru/media/base/kak_rabotat_s_fonovymi_kartinkami_v_css/*/
 .gray-box {
   border-radius: 20px;
   padding: 30px;
   background-color: #f3f3f3;
+  background-position: right;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .background__image-decorate-1 {
@@ -173,18 +158,20 @@ https://skillbox.ru/media/base/kak_rabotat_s_fonovymi_kartinkami_v_css/*/
   padding-left: 15px;
 }
 
-/* бордер снизу толщиной в 1 пиксель, сплошной, и цветом #3f2aff
+.list__item {
+  width: max-content;
+  border-bottom: 1px solid #3f2aff;
+  font-size: 20px;
+  color: #3f2aff;
+}
 
-размер шрифта 20 пикселей
-
-цвет текста #3f2aff */
 .list__item:not(:last-child) {
   margin-bottom: 20px;
 }
 
 ul li::marker {
   color: #3f2aff;
-  font-size: 1.5em;
+  font-size: 1em;
 }
 
 .image {
@@ -199,17 +186,11 @@ ul li::marker {
   font-size: 0;
 }
 
-/* при этом удалите бордер сверху
-
-внутренний отступ сверху и снизу 19 пикселей
-
-толщина шрифта 400
-
-
-выравнивание текста по центру */
-.image__content figcaption {
-  border-width: 1px;
-  border-style: solid;
-  border: #b6b6b6;
+.img__figcaption {
+  border: 1px solid #b6b6b6;
+  border-top: 0;
+  padding: 19px 0 19px 0;
+  font-weight: 400;
   font-size: 14px;
+  text-align: center;
 }
